--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,18 @@
 * {
-    font-family: sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
+}
+
+
+body {
+  height: 100vh;
+  max-width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fbb034;
+  background-image: linear-gradient(315deg, #fff2dd 0%, #ffbae8 74%);
 }
 input,
 button {
