--- a/src/components/Wrapper.css
+++ b/src/components/Wrapper.css
@@ -5,4 +5,10 @@
     border-radius: 10px;
     background-color: #485461;
     background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+    transition: all 0.5s;
+  
+}
+
+.wrapper:hover {
+    transform: translateY(-4px);
 }
