--- a/src/App.css
+++ b/src/App.css
@@ -11,9 +11,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #fbb034;
-  background-image: linear-gradient(315deg, #fff2dd 0%, #ffbae8 74%);
+  animation: rotate-bg-color 10s infinite;
 }
+
+
+
 input,
 button {
     font-size: 20px;
