--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Montserrat", sans-serif;
+  font-family: 'Roboto Mono', monospace;
+  box-sizing: border-box;
 }
-
 
 body {
   height: 100vh;
@@ -11,10 +11,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  animation: rotate-bg-color 10s infinite;
+  background: #0f0f15;
+  animation: rotate-bg-color 20s linear infinite;
+  color: #eee;
 }
-
-
 
 input,
 button {
