--- a/src/components/ButtonBox.css
+++ b/src/components/ButtonBox.css
@@ -1,8 +1,8 @@
 .buttonBox {
   width: 100%;
-  height: calc(100% - 110px);
+  height: calc(100% - 120px);
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: repeat(5, 1fr);
-  grid-gap: 10px;
+  gap: 12px;
 }
